--- a/server/package.json
+++ b/server/package.json
@@ -11,8 +11,10 @@
   "author": "Todd Clark",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "http-proxy-middleware": "^1.0.4",
+    "mysql": "^2.18.1",
     "random-id": "^1.0.4"
   },
   "devDependencies": {
