--- a/server/package.json
+++ b/server/package.json
@@ -11,10 +11,17 @@
   "author": "Todd Clark",
   "license": "MIT",
   "dependencies": {
+    "aws-sdk": "^2.1004.0",
+    "bcrypt": "^5.0.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "http-proxy-middleware": "^1.0.4",
+    "mapbox": "^1.0.0-beta10",
+    "mock-aws-s3": "^4.0.2",
     "mysql": "^2.18.1",
+    "nock": "^13.1.3",
+    "node-gyp": "^8.2.0",
+    "node-pre-gyp": "^0.17.0",
     "random-id": "^1.0.4"
   },
   "devDependencies": {
