--- a/server/package.json
+++ b/server/package.json
@@ -16,12 +16,17 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "http-proxy-middleware": "^1.0.4",
+    "jsonwebtoken": "^8.5.1",
     "mapbox": "^1.0.0-beta10",
     "mock-aws-s3": "^4.0.2",
     "mysql": "^2.18.1",
+    "njwt": "^1.1.0",
     "nock": "^13.1.3",
     "node-gyp": "^8.2.0",
     "node-pre-gyp": "^0.17.0",
+    "passport": "^0.5.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "random-id": "^1.0.4"
   },
   "devDependencies": {
